Commented out data info call
Looks nicer without the data info at the end

--- a/IMDBWebScraper.ipynb
+++ b/IMDBWebScraper.ipynb
@@ -113,9 +113,8 @@
     "'metascore': metascores\n",
     "})\n",
     "\n",
-    "print(movie_stats.info())\n",
+    "#print(movie_stats.info())\n",
     "movie_stats['n_user-rating'] = movie_stats['user-rating'] * 10\n",
-    "movie_stats.head()\n",
     "\n",
     "# save data to csv file\n",
     "movie_stats.to_csv('scraped_movie_data.csv')"
