--- a/IMDBWebScraper.ipynb
+++ b/IMDBWebScraper.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 969 entries, 0 to 968\n",
-      "Data columns (total 4 columns):\n",
-      "movie          969 non-null object\n",
-      "year           969 non-null int64\n",
-      "user-rating    969 non-null float64\n",
-      "metascore      969 non-null int64\n",
-      "dtypes: float64(1), int64(2), object(1)\n",
-      "memory usage: 30.4+ KB\n",
-      "None\n"
+      "Request:100; Frequency: 0.07713351251214996 requests/s\n"
      ]
     }
    ],
@@ -45,7 +36,7 @@
     "requests = 0\n",
     "\n",
     "# iterate through # of pages\n",
-    "for _ in range(70):\n",
+    "for _ in range(100):\n",
     "\n",
     "    # get url\n",
     "    url = get('https://www.imdb.com/search/title/?title_type=movie&genres=horror&start=' + str(movieCounter) + '&explore=title_type,genres&ref_=adv_nxt')\n",
@@ -64,7 +55,7 @@
     "        warn('Request: {}; Status code: {}'.format(requests, url.status_code))\n",
     "\n",
     "    # break the loop if the number of requests is greater than expected\n",
-    "    if requests > 72:\n",
+    "    if requests > 101:\n",
     "        warn('Number of requests was greater than expected.')\n",
     "        break\n",
     "\n",
@@ -82,9 +73,6 @@
     "            title = movie_elem.h3.a.text\n",
     "            titles.append(title)\n",
     "        \n",
-    "            posterUrl = movie_elem.img['loadlate']\n",
-    "            posterImg = f'/Users/fourfour/Desktop/WebScraper/IMDB Poster/{title}.png'\n",
-    "        \n",
     "            year = ''.join(c for c in movie_elem.find('span', class_ = 'lister-item-year text-muted unbold').text if c.isdigit())\n",
     "            years.append(int(year))\n",
     "        \n",
@@ -93,18 +81,9 @@
     "        \n",
     "            metascore = movie_elem.find('span', class_ = 'metascore').text\n",
     "            metascores.append(int(metascore))\n",
-    "        \n",
-    "            download(posterUrl, posterImg)\n",
     "    \n",
     "    movieCounter += 50\n",
     "    \n",
-    "########################\n",
-    "# downloads movie posters to computer\n",
-    "def download(url, fileName):\n",
-    "    with open(fileName, \"wb\") as file:\n",
-    "        response = get(url)\n",
-    "        file.write(response.content)\n",
-    "########################\n",
     "    \n",
     "# put data into pandas dataframe\n",
     "movie_stats = pd.DataFrame({'movie': titles,\n",
